--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "symfony/yaml": "7.2.*"
     },
     "require-dev": {
+        "symfony/debug-bundle": "7.2.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "7.2.*",
+        "symfony/web-profiler-bundle": "7.2.*"
     },
     "config": {
         "allow-plugins": {
