--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/security-bundle": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
         "symfony/ux-twig-component": "^2.22",
         "symfony/validator": "7.2.*",
